| Summary: | ASTERISK-27059: res_stasis: Stolen channel references are leaking | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2017-06-16 09:34:03 | Date Closed: | 2017-08-16 06:59:11 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_stasis |
| Versions: | 13.16.0 14.5.0 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The rest_api/external_interaction/ami_bridge/stasis_app tests each take 45 seconds to run but 40 of that is waiting on reactor timeouts. There is a stop_tests step in the yaml but it's not actually stopping the test. The delay is actually causing failures on heavily loaded systems.
The actual issue is being caused by channels that never get destroyed preventing asterisk from shutting down. It seems that when a static channel is "stolen" by another app, it's control structure isn't cleaned up properly. | ||
| Comments: | |||